Applied fix from trunk for revision: 1853904 ===
Improved: Updated plugin code to fix console warning related to deprecated method. Removed Double constructor call as its depracated since jdk 9. Also replace the CellType::getCellTypeEnum method call with CellTyoe::getCellType
(OFBIZ-10757)


git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-plugins/branches/release18.12@1854692 13f79535-47bb-0310-9956-ffa450edef68